--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-* {
-    box-sizing: border-box;
-}
-
 body {
     font-family: 'Open Sans', sans-serif;
     background-image: url("img/podjelje_cover.png");
@@ -37,17 +33,29 @@ body {
     width: calc(var(--height)/9*16);
 }
 
+body > section {
+    padding: 0 24px;
+}
+
 .tile {
     flex-direction: row;
     justify-content: center;
 }
 
+.apt {
+    margin: 0 12px;
+    font-family: 'Pacifico', cursive;
+    font-size: larger;
+}
+
 .apt a {
-    color: whitesmoke;
+    color:transparent;
+    padding-top: 10%;
 }
 
 .apt a:hover {
-    color: black;
+    color: whitesmoke;
+    text-shadow: 0 0 20px #050201;
 }
 
 .email a, .airbnb a {
