Continuing on the other pages

--- a/style.css
+++ b/style.css
@@ -37,11 +37,6 @@ body > section {
     padding: 0 24px;
 }
 
-.tile {
-    flex-direction: row;
-    justify-content: center;
-}
-
 .apt {
     margin: 0 12px;
     font-family: 'Pacifico', cursive;
@@ -59,11 +54,16 @@ body > section {
 }
 
 .email a, .airbnb a {
+    display: block;
     color: black;
 }
 
 .email a:hover, .airbnb a:hover {
     transform: scale(1.1);
+}
+
+.opis {
+    background-color: rgba(255, 255, 255, 0.8);
 }
 
 .bg-img {
